# 2d-Plane-Shooter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: AudioManager.h  BigEnemy.h  Collision.h  Enemy.h  Entity.h  Game.h  Mathf.h  MediumEnemy.h  Missile.h  ObjectSpawner.h  Player.h  RenderWindow.h  SmallEnemy.h  Texture.h  UIManager.h
src/: AudioManager.cpp  BigEnemy.cpp  Enemy.cpp  Entity.cpp  Flare.cpp  Game.cpp  Main.cpp  MediumEnemy.cpp  Missile.cpp  ObjectSpawner.cpp  Player.cpp  Projectile.cpp  RenderWindow.cpp  SmallEnemy.cpp  Texture.cpp  Timer.cpp  UIManager.cpp
